add depended git repos